--- a/wazuh-install.yml
+++ b/wazuh-install.yml
@@ -7,19 +7,55 @@
   tasks:
     - name: Download the Wazuh install script
       ansible.builtin.get_url:
-        url: https://packages.wazuh.com/4.9/wazuh-install.sh # download the official release of Wazuh from the source
+        url: https://packages.wazuh.com/4.9/wazuh-install.sh
         dest: /tmp/wazuh-install.sh
         mode: '0755'
 
     - name: Run the Wazuh install script
       ansible.builtin.command:
-        cmd: bash /tmp/wazuh-install.sh -a -i -o # the -a option will install all of the server's components together, the -i option will ignore warnings, and the -o option will overwrite any previous installation in case there is one.
+        cmd: bash /tmp/wazuh-install.sh -a -i -o
+      args:
+        creates: /var/ossec
     
-    - name: Install osquery
-      ansible.builtin.package:
-        name:
-          - osquery
-        state: latest
+- name: Install osquery
+  hosts: manager
+  become: yes
+  tasks:
+    - name: Download osquery tarball
+      ansible.builtin.get_url:
+        url: https://pkg.osquery.io/linux/osquery-5.13.1_1.linux_x86_64.tar.gz
+        dest: /tmp/osquery.tar.gz
+
+    - name: Extract osquery tarball
+      ansible.builtin.unarchive:
+        src: /tmp/osquery.tar.gz
+        dest: /opt/
+        remote_src: yes
+
+    - name: Move osquery binary to /usr/bin
+      ansible.builtin.command:
+        cmd: mv /opt/osquery-5.13.1_1.linux_x86_64/osquery* /usr/bin/
+      args:
+        removes: /usr/bin/osqueryd  # Remove the binary if it already exists
+        warn: false
+
+    - name: Set the correct permissions for osquery
+      ansible.builtin.file:
+        path: /usr/bin/osqueryd
+        owner: root
+        group: root
+        mode: '0755'
+
+    - name: Clean up the downloaded tarball
+      ansible.builtin.file:
+        path: /tmp/osquery.tar.gz
+        state: absent
+
+    - name: Start osquery daemon
+      ansible.builtin.systemd:
+        name: osqueryd
+        state: started
+        enabled: yes
 
 - name: Rotate Wazuh passwords
   hosts: manager
@@ -33,9 +69,8 @@
     
     - name: Run the Wazuh password changing script
       ansible.builtin.shell:
-        cmd: bash /tmp/wazuh-passwords-tool.sh -a > /var/ossec/etc/wazuh-passwords.txt # the -a option will change passwords for all users, including API users
-        # writes the output of the password rotation to a plaintext file, should be deleted or obscured after it is taken note of
-       
+        cmd: bash /tmp/wazuh-passwords-tool.sh -a > /var/ossec/etc/wazuh-passwords.txt
+
 - name: Reconfigure file permissions
   hosts: manager
   become: yes
@@ -52,17 +87,17 @@
   become: yes
   tasks:
     - name: Add linux agent group
-      command: /var/ossec/bin/agent_groups -a -g linux -q
+      ansible.builtin.command: /var/ossec/bin/agent_groups -a -g linux -q
 
     - name: Add windows agent group
-      command: /var/ossec/bin/agent_groups -a -g windows -q
+      ansible.builtin.command: /var/ossec/bin/agent_groups -a -g windows -q
 
 - name: Set up agent configurations
   hosts: manager
   become: yes
   tasks:
     - name: Configure kernel control commands
-      copy:
+      ansible.builtin.copy:
         content: |
           insmod:
           rmmod:
@@ -70,12 +105,12 @@
         dest: /var/ossec/etc/lists/kernel_control_commands
 
     - name: Copy osquery.conf
-      copy:
+      ansible.builtin.copy:
         src: osquery.conf
         dest: /etc/osquery/osquery.conf
 
     - name: Copy centralized_agent.conf
-      copy:
+      ansible.builtin.copy:
         src: centralized_agent.conf
         dest: /var/ossec/etc/shared/linux/agent.conf
         owner: wazuh
@@ -83,7 +118,7 @@
         mode: '0660'
 
     - name: Copy internal_options.conf
-      copy:
+      ansible.builtin.copy:
         src: internal_options.conf
         dest: /var/ossec/etc/internal_options.conf
         owner: root
@@ -91,7 +126,7 @@
         mode: '0640'
 
     - name: Copy ossec.conf
-      copy:
+      ansible.builtin.copy:
         src: ossec.conf
         dest: /var/ossec/etc/ossec.conf
         owner: root
@@ -99,7 +134,7 @@
         mode: '0660'
 
     - name: Copy linux_rules.xml
-      copy:
+      ansible.builtin.copy:
         src: linux_rules.xml
         dest: /var/ossec/ruleset/rules/linux_rules.xml
         owner: root
@@ -107,7 +142,7 @@
         mode: '0660'
 
     - name: Copy windows_rules.xml
-      copy:
+      ansible.builtin.copy:
         src: windows_rules.xml
         dest: /var/ossec/ruleset/rules/windows_rules.xml
         owner: root
@@ -119,20 +154,17 @@
   become: yes
   tasks:
     - name: Copy over decoder for Yara
-      copy:
+      ansible.builtin.copy:
         src: decoders/yara_decoder.xml
-        dst: /var/ossec/etc/decoders/yara-decoder.xml
+        dest: /var/ossec/etc/decoders/yara-decoder.xml
         owner: wazuh
         group: wazuh
         mode: '0660'
 
---- 
-# Agent config starts here
 - name: Install Wazuh agents
   hosts: linux
   become: yes
   tasks:
-    tasks:
     - name: Download and import Wazuh GPG key
       ansible.builtin.command: 
         cmd: "curl -s https://packages.wazuh.com/key/GPG-KEY-WAZUH | gpg --no-default-keyring --keyring gnupg-ring:/usr/share/keyrings/wazuh.gpg --import"
@@ -145,25 +177,56 @@
         mode: '0644'
     
     - name: Add Wazuh repository to sources list
-      ansible.builtin.command: echo "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/4.x/apt/ stable main" | tee -a /etc/apt/sources.list.d/wazuh.list
+      ansible.builtin.command: 
+        cmd: echo "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/4.x/apt/ stable main" | tee -a /etc/apt/sources.list.d/wazuh.list
     
     - name: Update apt package index
       ansible.builtin.apt:
         update_cache: yes
     
     - name: Install Wazuh agent using environment variable
-      ansible.builtin.shell: WAZUH_MANAGER="{{ hostvars['manager'][0] }}" apt-get install -y wazuh-agent
+      ansible.builtin.shell: 
+        cmd: WAZUH_MANAGER="{{ hostvars['manager'][0] }}" apt-get install -y wazuh-agent
 
-    - name: Install osquery
-      ansible.builtin.package:
-        name:
-          - osquery
-        state: latest
+    - name: Download osquery tarball
+      ansible.builtin.get_url:
+        url: https://pkg.osquery.io/linux/osquery-5.13.1_1.linux_x86_64.tar.gz
+        dest: /tmp/osquery.tar.gz
+
+    - name: Extract osquery tarball
+      ansible.builtin.unarchive:
+        src: /tmp/osquery.tar.gz
+        dest: /opt/
+        remote_src: yes
+
+    - name: Move osquery binary to /usr/bin
+      ansible.builtin.command:
+        cmd: mv /opt/osquery-5.13.1_1.linux_x86_64/osquery* /usr/bin/
+      args:
+        removes: /usr/bin/osqueryd  # Remove the binary if it already exists
+        warn: false
+
+    - name: Set the correct permissions for osquery
+      ansible.builtin.file:
+        path: /usr/bin/osqueryd
+        owner: root
+        group: root
+        mode: '0755'
+
+    - name: Clean up the downloaded tarball
+      ansible.builtin.file:
+        path: /tmp/osquery.tar.gz
+        state: absent
+
+    - name: Start osquery daemon
+      ansible.builtin.systemd:
+        name: osqueryd
+        state: started
+        enabled: yes
 
 - name: Install YARA and configure YARA rules
   hosts: linux
   become: yes
-
   tasks:
     - name: Install YARA and git
       ansible.builtin.package:
@@ -179,22 +242,21 @@
         mode: '0755'
 
     - name: Clone protections-artifacts repository
-    # Replace with RIT CCDC team rules once repo public
       ansible.builtin.git:
         repo: https://github.com/elastic/protections-artifacts
         dest: /opt/yara/rules/protections-artifacts
         force: yes
 
     - name: Compile YARA rules
-      ansible.builtin.command: yarac Linux* Multi* /opt/yara/rules/compiled.linux
+      ansible.builtin.command: 
+        cmd: yarac Linux* Multi* /opt/yara/rules/compiled.linux
       args:
         chdir: /opt/yara/rules/protections-artifacts/yara/rules
-      become: yes
 
-    - name: copy over YARA active response script
-      copy: 
+    - name: Copy over YARA active response script
+      ansible.builtin.copy: 
         src: yara.sh
-        dst: /var/ossec/active-response/bin/yara.sh
+        dest: /var/ossec/active-response/bin/yara.sh
         owner: root
         group: wazuh 
         mode: '0750'
@@ -203,16 +265,16 @@
   hosts: linux
   become: yes
   tasks:
-  - name: Reload systemd daemon
-    ansible.builtin.systemd:
-      daemon_reload: yes
+    - name: Reload systemd daemon
+      ansible.builtin.systemd:
+        daemon_reload: yes
 
-  - name: Enable Wazuh agent service
-    ansible.builtin.systemd:
-      name: wazuh-agent
-      enabled: yes
+    - name: Enable Wazuh agent service
+      ansible.builtin.systemd:
+        name: wazuh-agent
+        enabled: yes
 
-  - name: Start Wazuh agent service
-    ansible.builtin.systemd:
-      name: wazuh-agent
-      state: started
+    - name: Start Wazuh agent service
+      ansible.builtin.systemd:
+        name: wazuh-agent
+        state: started
