commented out osquery installation [FIX LATER]

--- a/wazuh-install.yml
+++ b/wazuh-install.yml
@@ -17,35 +17,32 @@
       args:
         creates: /var/ossec
 
-- name: Install osquery
-  hosts: all  # Change this to the specific group if needed
-  become: yes
-  tasks:
-    - name: Create keyrings directory
-      ansible.builtin.file:
-        path: /etc/apt/keyrings
-        state: directory
+# - name: Install osquery
+#   hosts: all
+#   become: yes
+#   tasks:
+#     - name: Create keyrings directory
+#       ansible.builtin.file:
+#         path: /etc/apt/keyrings
+#         state: directory
 
-    - name: Download osquery GPG key
-      ansible.builtin.command:
-        cmd: curl -L https://pkg.osquery.io/deb/pubkey.gpg | tee /etc/apt/keyrings/osquery.asc
-      args:
-        warn: false
+#     - name: Download osquery GPG key
+#       ansible.builtin.command:
+#         cmd: curl -L https://pkg.osquery.io/deb/pubkey.gpg | tee /etc/apt/keyrings/osquery.asc
 
-    - name: Add osquery repository
-      ansible.builtin.command:
-        cmd: echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/osquery.asc] https://pkg.osquery.io/deb deb main" | tee -a /etc/apt/sources.list.d/osquery.list
-      args:
-        warn: false
 
-    - name: Update apt package index
-      ansible.builtin.apt:
-        update_cache: yes
+#     - name: Add osquery repository
+#       ansible.builtin.command:
+#         cmd: echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/osquery.asc] https://pkg.osquery.io/deb deb main" | tee -a /etc/apt/sources.list.d/osquery.list
 
-    - name: Install osquery
-      ansible.builtin.apt:
-        name: osquery
-        state: present
+#     - name: Update apt package index
+#       ansible.builtin.apt:
+#         update_cache: yes
+
+#     - name: Install osquery
+#       ansible.builtin.apt:
+#         name: osquery
+#         state: present
 
 - name: Rotate Wazuh passwords
   hosts: manager
@@ -94,10 +91,10 @@
           modprobe:
         dest: /var/ossec/etc/lists/kernel_control_commands
 
-    - name: Copy osquery.conf
-      ansible.builtin.copy:
-        src: osquery.conf
-        dest: /etc/osquery/osquery.conf
+    # - name: Copy osquery.conf
+    #   ansible.builtin.copy:
+    #     src: osquery.conf
+    #     dest: /etc/osquery/osquery.conf
 
     - name: Copy centralized_agent.conf
       ansible.builtin.copy:
@@ -177,36 +174,6 @@
     - name: Install Wazuh agent using environment variable
       ansible.builtin.shell: 
         cmd: WAZUH_MANAGER="{{ hostvars['manager'][0] }}" apt-get install -y wazuh-agent
-
-- name: Install osquery
-  hosts: all  # Change this to the specific group if needed
-  become: yes
-  tasks:
-    - name: Create the /etc/apt/keyrings directory
-      ansible.builtin.file:
-        path: /etc/apt/keyrings
-        state: directory
-        mode: '0755'
-
-    - name: Download the osquery GPG key and save it to /etc/apt/keyrings/osquery.asc
-      ansible.builtin.get_url:
-        url: https://pkg.osquery.io/deb/pubkey.gpg
-        dest: /etc/apt/keyrings/osquery.asc
-        mode: '0644'
-
-    - name: Add the osquery repository
-      ansible.builtin.apt_repository:
-        repo: 'deb [arch=amd64 signed-by=/etc/apt/keyrings/osquery.asc] https://pkg.osquery.io/deb deb main'
-        state: present
-
-    - name: Update apt cache
-      ansible.builtin.apt:
-        update_cache: yes
-
-    - name: Install osquery
-      ansible.builtin.apt:
-        name: osquery
-        state: present
 
 - name: Install YARA and configure YARA rules
   hosts: linux
