revert back to using local binary to install agent, getting rid of unneeded zips

--- a/wazuh-install.yml
+++ b/wazuh-install.yml
@@ -154,41 +154,41 @@
   hosts: linux
   become: yes
   tasks:
-    # - name: copy over wazuh binary
-    #   ansible.builtin.copy:
-    #     src: binaries/wazuh-agent_4.7.2-1_amd64_debian.deb
-    #     dest: /tmp/wazuh-agent_4.7.2-1_amd64_debian.deb
+    - name: copy over wazuh binary
+      ansible.builtin.copy:
+        src: binaries/wazuh-agent_4.7.2-1_amd64_debian.deb
+        dest: /tmp/wazuh-agent_4.7.2-1_amd64_debian.deb
     
-    # - name: Install Wazuh agent from binary
-    #   ansible.builtin.apt:
-    #     deb: /tmp/wazuh-agent_4.7.2-1_amd64_debian.deb
-    #     state: present
-        
-    - name: Install curl
-      ansible.builtin.package:
-        name: curl
+    - name: Install Wazuh agent from binary
+      ansible.builtin.apt:
+        deb: /tmp/wazuh-agent_4.7.2-1_amd64_debian.deb
         state: present
         
-    - name: Download and import Wazuh GPG key
-      ansible.builtin.command: 
-        cmd: "curl -s https://packages.wazuh.com/key/GPG-KEY-WAZUH | gpg --keyring gnupg-ring:/usr/share/keyrings/wazuh.gpg --import"
+    # - name: Install curl
+    #   ansible.builtin.package:
+    #     name: curl
+    #     state: present
+        
+    # - name: Download and import Wazuh GPG key
+    #   ansible.builtin.command: 
+    #     cmd: "curl -s https://packages.wazuh.com/key/GPG-KEY-WAZUH | gpg --keyring gnupg-ring:/usr/share/keyrings/wazuh.gpg --import"
     
-    - name: Set permissions for the Wazuh GPG key
-      ansible.builtin.file:
-        path: /usr/share/keyrings/wazuh.gpg
-        mode: '0644'
+    # - name: Set permissions for the Wazuh GPG key
+    #   ansible.builtin.file:
+    #     path: /usr/share/keyrings/wazuh.gpg
+    #     mode: '0644'
     
-    - name: Add Wazuh repository to sources list
-      ansible.builtin.command: 
-        cmd: echo "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/4.x/apt/ stable main" | tee -a /etc/apt/sources.list.d/wazuh.list
+    # - name: Add Wazuh repository to sources list
+    #   ansible.builtin.command: 
+    #     cmd: echo "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/4.x/apt/ stable main" | tee -a /etc/apt/sources.list.d/wazuh.list
     
-    - name: Update apt package index
-      ansible.builtin.apt:
-        update_cache: yes
+    # - name: Update apt package index
+    #   ansible.builtin.apt:
+    #     update_cache: yes
     
-    - name: Install Wazuh agent using environment variable
-      ansible.builtin.shell: 
-        cmd: WAZUH_MANAGER="{{ MANAGER_IP }}" apt-get install -y wazuh-agent 
+    # - name: Install Wazuh agent using environment variable
+    #   ansible.builtin.shell: 
+    #     cmd: WAZUH_MANAGER="{{ MANAGER_IP }}" apt-get install -y wazuh-agent 
 
 - name: Install YARA and configure YARA rules
   hosts: linux
