misc changes from 4.9 revision

--- a/configs/ossec.conf
+++ b/configs/ossec.conf
@@ -49,6 +49,9 @@
     <rootkit_trojans>etc/rootcheck/rootkit_trojans.txt</rootkit_trojans>
 
     <skip_nfs>yes</skip_nfs>
+    
+    <ignore>/var/lib/containerd</ignore>
+    <ignore>/var/lib/docker/overlay2</ignore>
   </rootcheck>
 
   <wodle name="cis-cat">
@@ -473,6 +476,11 @@
 </ossec_config>
 
 <ossec_config>
+  <localfile>
+      <log_format>journald</log_format>
+    <location>journald</location>
+  </localfile>
+
   <localfile>
     <log_format>syslog</log_format>
     <location>/var/ossec/logs/active-responses.log</location>
