added windows agent configs, added packetbeat for linux

--- a/configs/agent_linux.conf
+++ b/configs/agent_linux.conf
@@ -303,4 +303,10 @@
     <log_format>syslog</log_format>
     <location>/var/log/iptables.log</location>
   </localfile>
+  
+  <localfile>
+    <log_format>json</log_format>
+    <location>/tmp/packetbeat/packetbeat</location>
+  </localfile>
 </agent_config>
+
