--- a/roles/agent/tasks/main.yml
+++ b/roles/agent/tasks/main.yml
@@ -1,51 +1,52 @@
 ---
-- name: copy over wazuh binary
-  ansible.builtin.copy:
-    src: binaries/wazuh-agent_4.7.2-1_amd64_debian.deb
-    dest: /tmp/wazuh-agent_4.7.2-1_amd64_debian.deb
-
-- name: Install Wazuh agent from binary
-  ansible.builtin.apt:
-    deb: /tmp/wazuh-agent_4.7.2-1_amd64_debian.deb
+# - name: Enroll agent using manager IP address
+#   replace:
+#     path: /var/ossec/etc/ossec.conf
+#     regexp: 'MANAGER_IP' # TODO check if this line exists
+#     replace: "{{ manager_ip }}"
+# TODO: rewrite for package managers other than apt
+- name: Install curl
+  ansible.builtin.package:
+    name: curl
     state: present
-
-- name: Enroll agent using manager IP address
-  replace:
-    path: /var/ossec/etc/ossec.conf
-    regexp: 'MANAGER_IP'
-    replace: "{{ manager_ip }}"
-
-# - name: Install curl
-#   ansible.builtin.package:
-#     name: curl
-#     state: present
     
-# - name: Download and import Wazuh GPG key
-#   ansible.builtin.command: 
-#     cmd: "curl -s https://packages.wazuh.com/key/GPG-KEY-WAZUH | gpg --keyring gnupg-ring:/usr/share/keyrings/wazuh.gpg --import"
+- name: Download and import Wazuh GPG key
+  ansible.builtin.command: 
+    cmd: "curl -s https://packages.wazuh.com/key/GPG-KEY-WAZUH | gpg --keyring gnupg-ring:/usr/share/keyrings/wazuh.gpg --import"
 
-# - name: Set permissions for the Wazuh GPG key
-#   ansible.builtin.file:
-#     path: /usr/share/keyrings/wazuh.gpg
-#     mode: '0644'
+- name: Set permissions for the Wazuh GPG key
+  ansible.builtin.file:
+    path: /usr/share/keyrings/wazuh.gpg
+    mode: '0644'
 
-# - name: Add Wazuh repository to sources list
-#   ansible.builtin.command: 
-#     cmd: echo "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/4.x/apt/ stable main" | tee -a /etc/apt/sources.list.d/wazuh.list
+- name: Add Wazuh repository to sources list
+  ansible.builtin.command: 
+    cmd: echo "deb [signed-by=/usr/share/keyrings/wazuh.gpg] https://packages.wazuh.com/4.x/apt/ stable main" | tee -a /etc/apt/sources.list.d/wazuh.list
 
-# - name: Update apt package index
-#   ansible.builtin.apt:
-#     update_cache: yes
+- name: Update apt package index
+  ansible.builtin.apt:
+    update_cache: yes
 
-# - name: Install Wazuh agent using environment variable
-#   ansible.builtin.shell: 
-#     cmd: WAZUH_MANAGER="{{ manager_ip }}" apt-get install -y wazuh-agent 
+- name: Install Wazuh agent using environment variable
+  ansible.builtin.shell: 
+    cmd: WAZUH_MANAGER="{{ manager_ip }}" apt-get install -y wazuh-agent 
+
+- name: Copy over Packetbeat install script
+  ansible.builtin.copy:
+    src: packetbeat.sh
+    dest: /tmp/packetbeat.sh
+    mode: 0755
+
+- name: Run Packetbeat install script 
+  ansible.builtin.command:
+    cmd: bash /tmp/packetbeat.sh 
 
 - name: Install YARA and git
   ansible.builtin.package:
     name: 
       - yara
       - git
+      - snoopy
     state: present
 
 - name: Create /opt/yara/rules directory
