created main playbook

--- a/inventory.ini
+++ b/inventory.ini
@@ -4,5 +4,11 @@
 
 [windows]
 
+[graylog]
+
 [all:vars]
 manager_ip=CHANGEME
+graylog_port=CHANGEME
+graylog_ip=CHANGEME
+indexer_user=CHANGEME
+indexer_password=CHANGEME
